# ai-projects

./: .gitignore  README.md  pyproject.toml  pytest.ini
mcp_servers/src/: main.py
mcp_servers/src/core/: config.py
mcp_servers/src/servers/: stock_server.py
projects/gateway/src/core/: config.py
projects/gateway/src/schemas/: chat.py
projects/gateway/src/services/: llm_service.py
projects/gateway/tests/: test_gateway.py
projects/stock_mcp/src/: main.py
projects/stock_mcp/src/api/: router.py
projects/stock_mcp/src/core/: config.py
projects/stock_mcp/src/database/: supabase.py
projects/stock_mcp/src/rag/: ingestion.py  retrieval.py
projects/stock_mcp/src/services/: llm_service.py
projects/stock_mcp/src/tools/: retrieved_embeddings.py
projects/stock_rag/src/api/: router.py
projects/stock_rag/src/schemas/: chat.py
projects/stock_rag/src/services/: llm_service.py
projects/stock_tracker/src/: main.py
projects/stock_tracker/src/core/: config.py
projects/stock_tracker/src/services/: llm_service.py
projects/stock_tracker/src/tools/: __init__.py  analytics.py
